# rust-exercises

./: .gitignore  README.md
002.mingrep/: Cargo.toml  (+1 more)
007.restful-api-in-sync-and-async-rust/kanban/: Cargo.toml  diesel.toml
007.restful-api-in-sync-and-async-rust/kanban/migrations/2021-06-30-160626_create_boards/: down.sql  up.sql
007.restful-api-in-sync-and-async-rust/kanban/migrations/2021-06-30-160710_create_cards/: down.sql  up.sql
007.restful-api-in-sync-and-async-rust/kanban/src/: logger.rs  main.rs  models.rs  schema.rs
011.Rust编程第一课/06_queryer/queryer/: Cargo.toml
011.Rust编程第一课/06_queryer/queryer/examples/: dialect.rs
011.Rust编程第一课/06_queryer/queryer/src/: convert.rs
011.rust-first-lesson/06_queryer/queryer-py/: Cargo.toml
011.rust-first-lesson/06_queryer/queryer-py/src/: lib.rs
011.rust-first-lesson/rgrep/: Cargo.toml  README.md
011.rust-first-lesson/rgrep-trait/: Cargo.toml  README.md
011.rust-first-lesson/rgrep-trait/src/: lib.rs
011.rust-first-lesson/rgrep/src/: main.rs  mest.rs
011.rust-first-lesson/xunmi-py/: Cargo.toml  Makefile  build.rs
011.rust-first-lesson/xunmi-py/src/: lib.rs
011.rust-first-lesson/xunmi-py/xunmi/: __init__.py
016.shortlink/: Cargo.toml  init.sql
016.shortlink/src/: dto.rs  handlers.rs  main.rs  models.rs
017.api-service/: Cargo.toml  rest.http
017.api-service/src/: main.rs
017.api-service/src/app/controllers/: shortlink_controller.rs
017.api-service/src/app/models/: dto.rs  shortlink.rs
017.api-service/src/config/: databases.rs  mod.rs
018.axum-example/: .env.example  Cargo.toml  README.md  rest-api.http
018.axum-example/migrations/2021-11-03-052736_create_users_table/: up.sql
018.axum-example/migrations/2021-11-14-065500_create_users_table/: down.sql  up.sql
018.axum-example/src/: error.rs  main.rs  schema.rs
018.axum-example/src/app/model/: mod.rs
018.axum-example/src/config/: databases.rs  env.rs  mod.rs  routes.rs
018.axum-example/src/util/: jwt.rs  mod.rs  validate.rs
019.rocket-app/: .gitignore  Cargo.toml  README.md  Rocket.toml
019.rocket-app/migrations/2020-11-04-161659_create_rustaceans/: down.sql
019.rocket-app/src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
020.advent-of-code-2021/2021/: Cargo.toml
020.advent-of-code-2021/2021/day01b/src/: main.rs
020.advent-of-code-2021/2021/day02b/: README.md
020.advent-of-code-2021/2021/day03a/: README.md
020.advent-of-code-2021/2021/day03a/src/: main.rs
020.advent-of-code-2021/2021/day03b/: README.md
020.advent-of-code-2021/2021/day04a/src/: main.rs
020.advent-of-code-2021/2021/day04b/src/: main.rs
025.tyrchen-rust-training/network/: Cargo.toml
025.tyrchen-rust-training/network/examples/: p2p_chat.rs
028.yuanzi-bilibili/hyper-proxy/: Cargo.toml  README.md
028.yuanzi-bilibili/hyper-proxy/src/: main.rs
031.rustedu/rustedu-basic/rust-web3/: Cargo.toml  README.md
031.rustedu/rustedu-basic/rust-web3/src/: main.rs
033.video-note/seaorm-demo/: Cargo.toml  README.md  data.sqlite  posts.sqlite
033.video-note/seaorm-demo/entity/src/: dict.rs  dictation.rs  lib.rs  post.rs  prelude.rs
033.video-note/seaorm-demo/migration/: Cargo.toml
033.video-note/seaorm-demo/migration/src/: lib.rs  m20220922_170643_dictation.rs  m20220923_003557_word.rs
033.video-note/seaorm-demo/src/: lib.rs  main.rs
033.video-note/srt/: Cargo.toml
033.video-note/srt/src/: main.rs  srt.rs
033.video-note/srt/tests/: 3.mov
034.learning-sql/: Cargo.toml  README.md  localhost.session.sql  sakila-data.sql
034.learning-sql/src/: main.rs
034.learning-sql/src/ch3/: ch3_1.rs  ch3_3.rs  ch3_4.rs  ch3_5.rs  ch3_6.rs  ch3_7.rs  mod.rs
034.learning-sql/src/ch4/: ch4_3_1.rs  ch4_3_2.rs  ch4_3_3.rs  ch4_3_4.rs  ch4_4_1.rs  mod.rs
034.learning-sql/src/ch5/: ch5_1.rs  ch5_2.rs  ch5_3.rs  mod.rs
034.learning-sql/src/ch6/: ch6_3_1.rs  mod.rs
034.learning-sql/src/ch8/: ch8_1.rs  ch8_2.rs  ch8_3_1.rs  ch8_3_2.rs  ch8_3_3.rs  ch8_4.rs  mod.rs
034.learning-sql/src/ch9/: ch9_1.rs  ch9_3.rs  ch9_3_1.rs  mod.rs
034.learning-sql/src/entity/: actor.rs  address.rs  category.rs  city.rs  country.rs  customer.rs  film.rs  film_actor.rs  film_category.rs  film_text.rs  height_grades.rs  heros.rs  heros_play.rs  heros_temp.rs  inventory.rs  language.rs  mod.rs  payment.rs  player.rs  player_score.rs  prelude.rs  rental.rs  sea_orm_active_enums.rs  staff.rs  store.rs  team.rs  team_score.rs
035.libp2p/02.p2p_chat/: Cargo.toml
035.libp2p/02.p2p_chat/src/: main.rs
036.rust-wasm/039.using_yewdux_to_store_form_data/: Cargo.toml  README.md
036.rust-wasm/039.using_yewdux_to_store_form_data/src/: auth_form.rs
036.rust-wasm/039.using_yewdux_to_store_form_data/src/stores/: auth_store.rs
036.rust-wasm/040.yewdux_functional/: Cargo.toml  README.md  index.html
036.rust-wasm/040.yewdux_functional/src/: display_form.rs  lib.rs  login_form.rs  main.rs
036.rust-wasm/040.yewdux_functional/src/store/: auth_store.rs
036.rust-wasm/yew-demo/: Cargo.toml  README.md  index.html
036.rust-wasm/yew-demo/src/: main.rs
036.rust-wasm/yew-demo/src/components/: test.rs
039.introduction-to-axum/routing/: Cargo.toml
039.introduction-to-axum/routing/src/: lib.rs  main.rs
039.introduction-to-axum/seaorm-axum/: Cargo.toml  init.sql
039.introduction-to-axum/seaorm-axum/src/: guard.rs  lib.rs  main.rs  router.rs
041.axum-yew-todo/server/: Cargo.toml  mysql.sql
041.axum-yew-todo/server/src/: app_state.rs  lib.rs  main.rs  router.rs
041.axum-yew-todo/types/: Cargo.toml
041.axum-yew-todo/types/src/: task.rs  user.rs
041.axum-yew-todo/web/: Cargo.toml  index.html
041.axum-yew-todo/web/src/: lib.rs  main.rs
044.leptos-tutorial/: Cargo.toml  README.md  index.html  package-lock.json  package.json
044.leptos-tutorial/src/: app.rs  component_children.rs  create_effect.rs  error_handling.rs  forms.rs  iteration.rs  lib.rs  main.rs  parent_child_communication.rs  progress_bar.rs  study_action.rs  study_create_resurce.rs  study_suspense.rs  study_transition.rs
044.leptos-tutorial/style/: output.css
tide-graphql/backend/: Cargo.toml
(+812 files in other folders)
