[package]
edition = "2021"
name = "axum_example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
async-trait = "0.1" # 允许 trait 里有 async fn
clap = "3.0.0-beta.5" # 命令行解析
colored = "2" # 命令终端多彩显示
dashmap = "4" # 并发的 HashMap
itertools = "0.10" # 扩展迭代工具
regex = "1" # 正则表达式
thiserror = "1" # 错误定义和处理
tokio = {version = "1", features = ["full"]}# 异步处理     
tracing = "0.1" # 日志处理
tracing-subscriber = "0.3" # 日志和追踪

base64 = "0.13" # base64 编码/解码
futures = "0.3" # 提供 Stream trait
jsonwebtoken = "7.2" 
lazy_static = "1" # 通过宏更方便地初始化静态变量
uuid = {version = "0.8", features = ["serde", "v4"]} 
validator = {version = "0.14", features = ["derive"]} 

derive_more = "0.99"
serde = {version = "1", features = ["derive"]}# 序列化/反序列化数据
serde_derive = "1.0"
serde_json = "1.0"

chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["mysql", "r2d2", "serde_json", "extras", "chrono"]}
dotenv = "0.15"
r2d2 = "0.8"

axum = {version = "0.3"}
tower = {version = "0.4", features = ["util", "timeout"]}
tower-http = {version = "0.1", features = ["add-extension", "trace"]}

captcha = "0.0.8" # 验证码
md5 = "0.7.0" # 加密
