[package]
edition = "2018"
name = "rgrep"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2" # 命令终端多彩显示
glob = "0.3" # 文件名正则匹配
itertools = "0.10" # 扩展迭代工具
rayon = "1" # 多线程
regex = "1" # 正则匹配
thiserror = "1" # 错误处理
