[package]
edition = "2018"
name = "rgrep"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2" # 命令终端多彩显示
globset = "0.4" # 处理通配符
regex = "1" # 正则表达式
tokio = {version = "1", features = ["full"]}# 异步处理
tracing = "0.1" # 日志处理
tracing-subscriber = "0.2" # 日志和追踪

[dev-dependencies]
