[package]
edition = "2021"
name = "network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
libp2p = {version = "0.50.0", features = [
  "tcp",
  "dns",
  "async-std",
  "websocket",
  "noise",
  "mplex",
  "yamux",
  "ping",
]}
tokio = {version = "1", features = ["full"]}
