[package]
edition = "2021"
name = "network"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
libp2p = {version = "0.50.0", features = [
  "full",
]}
tokio = {version = "1", features = ["full"]}
