[package]
name = "hyper-proxy-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
hyper-rustls = "0.22"
futures-util = "0.3"
anyhow = "1"
