[package]
edition = "2021"
name = "seaorm-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]
[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
anyhow = "1"
[dependencies.sea-orm]
default-features = false
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
version = "0.9"
