[package]
edition = "2021"
name = "p2p_chat"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = {version = "1", features = ["attributes"]}
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3"
libp2p = {version = "0.50.0", features = ["full"]}
void = "1"
