[package]
name = "yewdux_functional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.0"
