[package]
edition = "2021"
name = "yew-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = {version = "0.20.0", features = ["csr"]}

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
version = "0.3"
