[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.4", features = ["headers", "macros"]}
bcrypt = "0.14.0"
chrono = {version = "0.4.23", features = ["serde"]}
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "8.2.0"
sea-orm = {version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_with = "2.2.0"
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.3.5", features = ["cors"]}
validator = {version = "0.16.0", features = ["derive"]}
