[package]
edition = "2021"
name = "types"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
validator = { version = "0.16.0", features = ["derive"] }
