[package]
edition = "2021"
name = "types"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
sea-orm = "0.11.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
serde_with = "2.2.0"
validator = {version = "0.16.0", features = ["derive"]}
