[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8"
gloo-net = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stylist = { version = "0.12", features = ["yew"] }
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yewdux = "0.9"

[dependencies.web-sys]
features = ["HtmlInputElement", "HtmlSelectElement"]
version = "0.3"
