[package]
name = "queryer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "dialect"

[[example]]
name = "covid"

[[example]]
name = "csv"

[dependencies]
anyhow = "1" # 错误处理, 更好地库推荐 thiserror
async-trait = "0.1" # 允许 trait 里有 async fn
sqlparser = "0.10" # SQL 解析器
polars = { version = "0.15", features = ["json", "lazy"] } # DataFrame 库
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] } # HTTP 客户端
tokio = { version = "1", features = ["fs"] } # 异步库使用异步文件处理
tracing = "0.1" # 日志处理

[dev-dependencies]
tracing-subscriber = "0.2" # 日志处理
tokio = { version = "1", features = ["full"] } # 在 example 下需要更多的 tokio feature